trying to fix flickering service banner on home page

--- a/client/animations.css
+++ b/client/animations.css
@@ -45,6 +45,29 @@
     transition: opacity 300ms linear;
 }
 
+.example-enter {
+  opacity: 0.01;
+}
+
+.containeranimation {
+    position: relative;
+}
+
+.example-enter.example-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.example-leave {
+  opacity: 1;
+}
+
+.example-leave.example-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
+
 .err-appear{
     background-color: #e54053;
 }
